# haskellbook

./: README.md  stack.yaml
chapter14/morse/: morse.cabal
chapter14/morse/src/: Main.hs  Morse.hs
chapter14/morse/tests/: tests.hs
chapter21/: README.md  chapter21.cabal
chapter21/.stack-work/install/ccbce92a/flag-cache/: Cabal-2.0.1.1-Fs1ITBnI1cpHdS6gABE76T  QuickCheck-2.10.1-Ewacc04OJICEFWthkI3IgS  RSA-2.3.0-Lut8YdEH7SeEPLissHhawx  SHA-1.6.4.2-1gNz0XEXVc9D2LWQ8o29zI  StateVar-1.1.0.4-Lu3XXOaBt4N93qdBGMlVeM  adjunctions-4.3-B6tjCtk1PZw5WkPE1P0giy  aeson-1.2.3.0-2CXsEDAiNhICNA7ieJgbRs  asn1-encoding-0.9.5-DSMbIhaPa16LWG9G2s2B4L  asn1-parse-0.9.4-Fu0VtGMe4BT5n6Z7FBukEa  asn1-types-0.3.2-FUTNwtDKsoZKvERbYMJOUv  async-2.1.1.1-H3j65XcXMHtBvmNwGCQ80G  attoparsec-0.13.2.0-Fsg4QAkSjfewS85obWjil  authenticate-oauth-1.6-1o6FG4F4QRsEboxJJzyCqc  base-compat-0.9.3-61QXrLshUW48h5q15T0fg0  base-orphans-0.6-KoJqNefbvUAEuaR7CDOiu4  base16-bytestring-0.1.1.6-Bd4rUARbKHBrsqzcqGjb8  base64-bytestring-1.0.0.1-8MlzMz2YH3lCqJ4GOwL1Be  basement-0.0.4-CQPUVuTHCHJ94cOhwxYf1X  bifunctors-5.5-LLQEf27MLTuDU9rQ46C1Tr  blaze-builder-0.4.0.2-8u0JsnNi77k1DtjV0YEZQ0  byteable-0.1.1-4PLPgH6a2E14oN7yL5y3oL  cabal-doctest-1.0.4-LtpyS2VHPzoIHFBrWlKEBm  call-stack-0.1.0-BVjoAlBRe9FCSr5eFfllei  case-insensitive-1.2.0.10-8fWCn0YU2LFH0JYJwGUzuj  cereal-0.5.4.0-J3dBBt5iGIcHZAvdNSHzok  checkers-0.4.9.5-4YL2WG4hWDpHtklCxf4jvO  comonad-5.0.2-K8CfXcf8sXVEHCSl8eTXEp  connection-0.2.8-HpyAXrfRvARF9JXImI8iy6  contravariant-1.4-7IfrnOnBYsL8onpeYgvmpg  cookie-0.4.3-9kqDbJ83mh7Ds9jlg5TA8A  crypto-api-0.13.3-Cny4Zlmxk2FHjXGpYL1grl  crypto-pubkey-types-0.4.3-7sCjttyUeGZ7ZDbI4AD1nm  cryptohash-0.11.9-6H5SNtEN7Y8DS6OGuDWrJc  cryptonite-0.24-JNQaswYKuErG1yHzC0UvCK  data-default-0.7.1.1-LLJD5aWfgkS1JjXQ4KEWbv  data-default-class-0.1.2.0-8hmGYd6GPAfLQPQcWKOjRm  data-default-instances-containers-0.0.1-A7WE5ZxkyD2DXghs3tnK2n  data-default-instances-dlist-0.0.1-6VPSHd18HWHY1SrFsIVF8  (+56 more)
chapter21/src/: Exercises.hs  HttpStuff.hs  Redirect.hs
(+598 files in other folders)
